@@ -1,3 +1,7 @@
+2007-10-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	* sys/stat.h, wstat.h: Changed POSIX prototypes.
+
 2007-10-08  Kai Tietz  <kai.tietz@onevision.com>
 
 	* winsock.h, winsock2.h: Make SOCKET definition signed.
