@@ -1,3 +1,7 @@
+2007-10-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	* _fstat64i32.c,_fwstat64i32.c: New.
+
 2007-10-05  zhou drangon  <drangon.mail@gmail.com>
 
 	* misc/spawnv.c: Corrected mode argument.
